# opencv

DisplayImage/: 2dfilter  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  affine_transform  backprojection  bounding_box_circle  bounding_rotate  cal_hist  canny  cmake_install.cmake  contour  convex_hull  cvt_gray_image  erosion_dilation  histogram_comparison  histogram_equalize  hough_line  laplacian  moments  morphology  point_contour  pyramid_gaussian  show_happy_fish  sobel  template_match  test  threshold
DisplayImage/src/: 2dfilter.cpp  DisplayImage.cpp  affine.cpp  backprojection.cpp  basic_drawing1.cpp  blend_two_figures.cpp  bounding_box_circle.cpp  bounding_rotate.cpp  cal_hist.cpp  canny.cpp  contour.cpp  contrast_and_brightness.cpp  convex_hull.cpp  cvt_gray_image.cpp  discrete_fourier_transform.cpp  erosion_dilation.cpp  histogram_comparison.cpp  histogram_equalize.cpp  hough_circle.cpp  hough_line.cpp  laplacian.cpp  moments.cpp  morphology.cpp  pad_border.cpp  point_contour.cpp  pyramid_gaussian.cpp  remap.cpp  show_happy_fish.cpp  sobel.cpp  template_match.cpp  test.cpp  threshold.cpp
feature2d/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cornersubpix  harris_corner  shi_tomasi_corner
feature2d/src/: cornersubpix.cpp  featrue_detection.cpp  harris_corner.cpp  shi_tomasi_corner.cpp
highgui/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  trackbar
highgui/src/: trackbar.cpp  video_similarity.cpp
object/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
opencv_python/Gui_features/: drawing.py  image.py  mousecallback.py  mousecallback2.py  output.avi  trackbar.py  video.py  video_save.py
opencv_python/core_operations/: arithmetic_operation.py  basic_operation.py  border_image.py  performance_measurement.py
opencv_python/image_process/: backprojection_histogram.py  canny.py  change_colorspaze.py  contour_find_draw.py  contour_more_functions.py  contours_features.py  geometric_transformations.py  histogram_equalization.py  histograms_basics.py  image_gradients.py  image_gradients2.py  match_shapes.py  morphological_transformations.py  multiple_matching.py  template_matching.py  thresh.py
opencv_python/object_detection/: face_detection.py
