cmake_minimum_required(VERSION 2.8)
project(DisplayImage)
find_package( OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})


add_executable(DisplayImage src/DisplayImage.cpp)
add_executable(show_happy_fish src/show_happy_fish.cpp)
add_executable(cvt_gray_image src/cvt_gray_image.cpp)
add_executable(erosion_dilation src/erosion_dilation.cpp)
add_executable(morphology src/morphology.cpp)
add_executable(pyramid_gaussian src/pyramid_gaussian.cpp)
add_executable(threshold src/threshold.cpp)
add_executable(2dfilter src/2dfilter.cpp)
add_executable(sobel src/sobel.cpp)
add_executable(laplacian src/laplacian.cpp)
add_executable(canny src/canny.cpp)
add_executable(hough_line src/hough_line.cpp)
add_executable(affine_transform src/affine.cpp)
add_executable(histogram_equalize src/histogram_equalize.cpp)
add_executable(cal_hist src/cal_hist.cpp)
add_executable(histogram_comparison src/histogram_comparison.cpp)
add_executable(backprojection src/backprojection.cpp)
add_executable(template_match src/template_match.cpp)
add_executable(contour src/contour.cpp)
add_executable(convex_hull src/convex_hull.cpp)
add_executable(test src/test.cpp)
add_executable(bounding_box_circle src/bounding_box_circle.cpp)
add_executable(bounding_rotate src/bounding_rotate.cpp)
add_executable(moments src/moments.cpp)
add_executable(point_contour src/point_contour.cpp)

target_link_libraries(point_contour ${OpenCV_LIBS})
target_link_libraries(moments ${OpenCV_LIBS})
target_link_libraries(bounding_rotate ${OpenCV_LIBS})
target_link_libraries(bounding_box_circle ${OpenCV_LIBS})
target_link_libraries(test ${OpenCV_LIBS})
target_link_libraries(convex_hull ${OpenCV_LIBS})
target_link_libraries(contour ${OpenCV_LIBS})
target_link_libraries(template_match ${OpenCV_LIBS})
target_link_libraries(backprojection ${OpenCV_LIBS})
target_link_libraries(histogram_comparison ${OpenCV_LIBS})
target_link_libraries(cal_hist ${OpenCV_LIBS})
target_link_libraries(histogram_equalize ${OpenCV_LIBS})
target_link_libraries(affine_transform ${OpenCV_LIBS})
target_link_libraries(hough_line ${OpenCV_LIBS})
target_link_libraries(canny ${OpenCV_LIBS})
target_link_libraries(laplacian ${OpenCV_LIBS})
target_link_libraries(sobel ${OpenCV_LIBS})
target_link_libraries(2dfilter ${OpenCV_LIBS})
target_link_libraries(threshold ${OpenCV_LIBS})
target_link_libraries(pyramid_gaussian ${OpenCV_LIBS})
target_link_libraries(morphology ${OpenCV_LIBS})
target_link_libraries(erosion_dilation ${OpenCV_LIBS})
target_link_libraries(cvt_gray_image ${OpenCV_LIBS})
target_link_libraries(show_happy_fish ${OpenCV_LIBS})
target_link_libraries(DisplayImage ${OpenCV_LIBS})
